--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,5 +22,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Corsica (France) -- Description and travel'
 - !lcc 'DC'
+- GITenberg
 title: A Lady's Tour in Corsica, Vol. 2 (of 2)
 url: http://www.gutenberg.org/ebooks/44994
